# rawcut

./: .gitignore  CINEMATIC_PIPELINE.md  CLAUDE.md  DESIGN.md  README.md  TODOS.md
.github/workflows/: deploy-backend.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: asset.py  database.py
backend/app/routers/: auth.py  auto_video.py  chat.py  chunked_upload.py  health.py  projects.py  renders.py  search.py  sessions.py  storage.py  sync_health.py  tagging.py  upload.py
backend/app/services/: auto_tagger.py  auto_video_service.py  blob_storage.py  render_service.py  script_service.py  search_service.py  storyboard_service.py  sync_health.py
backend/luts/: fuji_3510.cube  kodak_2383.cube
backend/tests/: conftest.py  test_auto_video_integration.py  test_auto_video_service.py
infra/: main.bicep  parameters.json
infra/devbox/: cloud-init.yaml
ios/: SETUP.md  project.yml
ios/Rawcut/: Info.plist
ios/Rawcut.xcodeproj/: project.pbxproj
ios/Rawcut/App/: AppDelegate.swift  RawcutApp.swift
ios/Rawcut/Models/: MediaAsset.swift  SyncStatus.swift
ios/Rawcut/Persistence/: LocalStore.swift
ios/Rawcut/Resources/: Localizable.xcstrings
ios/Rawcut/Services/: APIClient.swift  AuthManager.swift  DownloadManager.swift  NetworkMonitor.swift  PhotoLibraryObserver.swift  StorageManager.swift  SyncEngine.swift  UploadManager.swift
ios/Rawcut/Views/: ContentView.swift
ios/Rawcut/Views/Auth/: SignInView.swift
ios/RawcutTests/: RawcutTests.swift
(+22 files in other folders)
